# minimal-one-to-one-project

./: Makefile  db.sqlite3  manage.py  pyproject.toml
minimal_one_to_one_project/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: models.py  schema.py  test_one_to_one_schema.py
myapp/migrations/: 0001_initial.py  0002_person_bank_account.py
