[tool.poetry]
name = "minimal-one-to-one-project"
version = "0.1.0"
description = ""
authors = ["Tormod Haugland <tormod.haugland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
graphene = "^3.4"
graphene-django = "^3.2.2"
graphene-django-cud = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
